Bug 534074 - [surefire] equinox resolver fails for packages which should be provided by the system bundle
Change-Id: I385a559adf46c63b4b69b5c3f7aa6b4148d8a1ee